🐛 fix: spline scene invisible on vercel hosting

--- a/src/components/SplineScene.module.scss
+++ b/src/components/SplineScene.module.scss
@@ -1,4 +1,4 @@
-.container {
+.opacityContainer {
   position: absolute;
   top: 0;
   left: 0;
@@ -6,4 +6,13 @@
   width: 100%;
   height: 100%;
   transition: opacity 0.5s ease;
+}
+
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
 }
